02-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        lab8-role: "B"
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
