03-mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-sql
  labels:
    app: my-sql
spec:
  nodeSelector:
    lab8-role: "C"
  containers:
    - name: mysql
      image: mysql:8
      ports:
        - containerPort: 3306
