08-test-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-frontend
  labels:
    app: frontend
spec:
  containers:
    - name: netshoot
      image: nicolaka/netshoot
      command: ["sleep", "infinity"]
