09-test-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-backend
  labels:
    app: backend
spec:
  containers:
    - name: netshoot
      image: nicolaka/netshoot
      command: ["sleep", "infinity"]
