04-frontend-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 32080
