05-backend-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 80
