06-mysql-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-mysql
spec:
  type: ClusterIP
  selector:
    app: my-sql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
